# release-test

./: .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Dockerfile  pyproject.toml  release-please-config.json
.github/: release-please-config.json  release-please.json
.github/workflows/: api-wf.yaml  bot.yaml  release-real.yaml  release.yaml
api/: CHANGELOG.md  pyproject.toml
api/tests/: one_test.py
ui/: package.json
