[tool.poetry]
name = "release-test"
version = "0.1.0"
description = ""
authors = ["lorenzodagostinoradicalbit <lorenzo.dagostino@radicalbit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
