[tool.poetry]
name = "release-test"
# x-release-please-start-version
version = "1.6.0"
# x-release-please-end
description = ""
authors = ["lorenzodagostinoradicalbit <lorenzo.dagostino@radicalbit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.4.8"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
